src/backends/meta-fd-source.c calls close() without there being a prior declaration (via unistd.h)
On musl and llvm 16.x, this will result in a hard error about implicit declaration of close()
. I guess you probably get it accidentally through another include on glibc. I worked around it by including unistd.h
in src/backends/meta-fd-source.c
but I'm not sure if that is where you want it.